# data-utilities

./: .gitattributes  .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/density_count_model/: README.md  cagedata-1.csv  cagedata-10.csv  density.csv  density.yaml  density_count_ode.py  deployment_2011-10-26_2011-11-01_cage_10.csv  deployment_2011-10-26_2011-11-01_cage_8.csv  deployment_2011-10-26_2011-11-01_cage_9.csv  example_manifest.yaml  sentinel_cages_sampling.yaml
examples/farm_site_af_source/: fo_farms.csv  fo_farms.json  fo_farms.yaml  fo_lice.yaml  fo_lice_data.csv  fo_lice_data.json
examples/sentinel_cages/: Sentinel_cage_sampling_info_update_01122022.csv  Sentinel_cage_station_info_6.csv  prep.R  sampling_info.json  sentinel_cages.yaml  sentinel_cages_cleaned.csv  sentinel_cages_cleaned_us.csv  sentinel_cages_sampling.yaml  sentinel_cages_sampling_us.yaml  sentinel_cages_site.yaml  sentinel_cages_us.yaml  split.py
fisdat/: __init__.py  _version.py  cmd_dat.py  cmd_job.py  cmd_up.py  data_model.py  kludge.py  ns.py  test_cmd_dat.py  test_cmd_up.py  test_utils.py  utils.py
manual_test/: fo_lice_data.csv  fo_lice_data.json  manifest.json  script.sh
misc/: fgit
test/: test_cmd_dat.py  test_cmd_up.py
