[build-system]
requires      = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name    = "fisdat"
authors = [
	{ name = "William Waites" },
	{ name = "Meadhbh Moriarty" },
	{ name = "Duncan Guthrie" },
]
description     = "SAVED: Data schemata validation and submission"
readme          = "README.md"
requires-python = ">=3.5"
keywords        = ["biological data", "semantic web"]
license         = {text = "GPLv3"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
        "google-cloud-storage",
        "linkml==1.7.10",
        "linkml-runtime==1.7.5",
        "mypy"
]
version  = "0.7"

[project.scripts]
fisdat = "fisdat.cmd_dat:cli"
fisjob = "fisdat.cmd_job:cli"
fisup  = "fisdat.cmd_up:cli"

[tool.setuptools]
packages = ["fisdat"]
